--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,8 @@ dependencies {
 	compile 'org.springframework.boot:spring-boot-starter-hateoas'
 	compile 'org.springframework.boot:spring-boot-starter-security'
 	compile 'org.springframework.boot:spring-boot-starter-web'
+	compile "io.springfox:springfox-swagger2:${springfoxVersion}"
+	compile "io.springfox:springfox-swagger-ui:${springfoxVersion}"
 	compile "org.jasig.portal:uPortal-soffit-renderer:${uPortalVersion}"
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	testCompile 'org.springframework.boot:spring-boot-starter-test'
