--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,16 @@
 server.port=8090
 
 org.apereo.portal.soffit.jwt.signatureKey=CHANGEME
+
+## CORS Allowed Origins
+##
+## Default is http://localhost:8080.
+#
+#org.apereo.portal.fbms.api.cors.origins=http://localhost:8080
+
+## Logging Levels
+##
+## Examples of how to specify logging level.
+#
+#logging.level.org.springframework.security=INFO
+#logging.level.org.apereo.portal.soffit.security=DEBUG
