Issue #16:  provide support for retrieving submissions previously created by users

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,25 @@
-server.port=8090
+server.port=8091
 
 org.apereo.portal.soffit.jwt.signatureKey=CHANGEME
+
+## Database Connection Settings
+##
+## Attempts to leverage the standard properties in PORTAL_HOME, with fallback to the values in this file.
+#
+hibernate.connection.driver_class=org.hsqldb.jdbc.JDBCDriver
+hibernate.connection.url=jdbc:hsqldb:hsql://localhost:8887/uPortal
+hibernate.connection.username=sa
+hibernate.connection.password=
+hibernate.connection.validationQuery=select 1 from INFORMATION_SCHEMA.SYSTEM_USERS
+hibernate.dialect=org.hibernate.dialect.HSQLDialect
+
+spring.datasource.driver-class=${hibernate.connection.driver_class}
+spring.datasource.url=${hibernate.connection.url}
+spring.datasource.username=${hibernate.connection.username}
+spring.datasource.password=${hibernate.connection.password}
+
+spring.jpa.properties.hibernate.dialect=${hibernate.dialect}
+spring.jpa.hibernate.ddl-auto=update
 
 ## CORS Allowed Origins
 ##
