--- a/build.gradle
+++ b/build.gradle
@@ -1,70 +1,5 @@
-buildscript {
-    ext {
-        springBootVersion = '2.0.3.RELEASE'
-    }
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-    }
-}
+description = "Form Builder Microservice (FBMS) for the uPortal ecosystem, by Apereo"
 
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
-apply plugin: 'war'
+subprojects {
 
-group = 'org.jasig.portal.fbms'
-version = '1.0.0-SNAPSHOT'
-sourceCompatibility = 1.8
-
-repositories {
-    mavenCentral()
-}
-
-configurations {
-    providedRuntime
-}
-
-dependencies {
-    compile 'org.springframework.boot:spring-boot-starter-cache'
-    compile 'org.springframework.boot:spring-boot-starter-data-jpa'
-    compile 'org.springframework.boot:spring-boot-starter-hateoas'
-    compile 'org.springframework.boot:spring-boot-starter-security'
-    compile 'org.springframework.boot:spring-boot-starter-web'
-    compile "io.springfox:springfox-swagger2:${springfoxVersion}"
-    compile "io.springfox:springfox-swagger-ui:${springfoxVersion}"
-    compile "org.jasig.portal:uPortal-soffit-renderer:${uPortalVersion}"
-    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
-    testCompile 'org.springframework.boot:spring-boot-starter-test'
-    testCompile 'org.springframework.security:spring-security-test'
-
-    /*
-     * TODO:  Remove this dependency.
-     *
-     * It's not appropriate for components like FBMS to come with database drivers baked-in.  They
-     * should be added by implementors, perhaps through an overlay in uPortal-start.  Including them
-     * in the Apereo release leads to version conflicts.
-     */
-    runtime 'org.hsqldb:hsqldb:2.4.1'
-
-    /*
-     * TODO:  Remove this one as well, once we're comforatble the migration to Spring Boot 2 is stable
-     */
-    runtime 'org.springframework.boot:spring-boot-properties-migrator'
-
-}
-
-/**
- * This custom Gradle task starts the Spring Boot app and invokes the Importer, passing the location
- * 'docs/examples.'
- */
-task bootRunImport(type: org.springframework.boot.gradle.tasks.run.BootRun) {
-    doFirst() {
-        main = 'org.apereo.portal.fbms.ApereoFbmsApplication' // Same as "normal"
-        classpath = sourceSets.main.runtimeClasspath
-        args = ['--import', 'docs/examples']
-    }
 }
