--- a/fbms-webapp/build.gradle
+++ b/fbms-webapp/build.gradle
@@ -20,15 +20,13 @@ group = 'org.jasig.portal.fbms'
 version = '1.0.0-SNAPSHOT'
 sourceCompatibility = 1.8
 
-repositories {
-    mavenCentral()
-}
-
 configurations {
     providedRuntime
 }
 
 dependencies {
+    compile project(':fbms-core')
+
     compile 'org.springframework.boot:spring-boot-starter-cache'
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
     compile 'org.springframework.boot:spring-boot-starter-hateoas'
