--- a/fbms-core/build.gradle
+++ b/fbms-core/build.gradle
@@ -7,12 +7,15 @@ dependencies {
      * This list parrots the required (mostly transitive) dependencies from fbms-webapp;  I wish
      * there were a good way to get the version numbers from there.
      */
-    compileOnly 'com.fasterxml.jackson.core:jackson-databind:2.9.6'
-    compileOnly 'javax.servlet:servlet-api:2.5'
-    compileOnly 'org.apache.commons:commons-lang3:3.7'
-    compileOnly 'org.hibernate:hibernate-core:5.2.17.Final'
-    compileOnly 'org.slf4j:slf4j-api:1.7.25'
-    compileOnly 'org.springframework.data:spring-data-jpa:2.0.8.RELEASE'
-    compileOnly 'org.springframework:spring-beans:5.0.7.RELEASE'
-    compileOnly 'org.springframework:spring-context:5.0.7.RELEASE'
+    compile "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}"
+    compile "org.apache.commons:commons-lang3:${commonsLang3Version}"
+    compile "org.hibernate:hibernate-core:${hibernateVersion}"
+    compile "org.slf4j:slf4j-api:${slf4jVersion}"
+    compile "org.springframework.data:spring-data-jpa:${springDataJpaVersion}"
+    compile "org.springframework:spring-beans:${springVersion}"
+    compile "org.springframework:spring-context:${springVersion}"
+    compile "org.springframework.security:spring-security-core:${springSecurityVersion}"
+
+    compileOnly "javax.servlet:servlet-api:${servletApiVersion}"
+
 }
