refactor(dependencies):  move (most) dependencies of fbms-core to 'compile' configuration from 'compileOnly' so they will be transitive

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,10 @@
+commonsLang3Version=3.7
+hibernateVersion=5.2.17.Final
+jacksonVersion=2.9.6
+servletApiVersion=2.5
+slf4jVersion=1.7.25
+springVersion=5.0.7.RELEASE
+springDataJpaVersion=2.0.8.RELEASE
+springSecurityVersion=5.0.6.RELEASE
 springfoxVersion=2.8.0
 uPortalVersion=5.1.1
