--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,9 @@
+group=org.jasig.portal.fbms
+version=0.9.0-SNAPSHOT
+
+# Dependency Versions
 commonsLang3Version=3.7
+formBuilderVersion=0.1.2
 hibernateVersion=5.2.17.Final
 jacksonVersion=2.9.6
 servletApiVersion=2.5
