--- a/fbms-webapp/build.gradle
+++ b/fbms-webapp/build.gradle
@@ -13,6 +13,7 @@ buildscript {
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'java'
 apply plugin: 'war'
 
 sourceCompatibility = 1.8
