--- a/fbms-webapp/build.gradle
+++ b/fbms-webapp/build.gradle
@@ -16,10 +16,12 @@ apply plugin: 'io.spring.dependency-management'
 apply plugin: 'java'
 apply plugin: 'war'
 
-sourceCompatibility = 1.8
-
 configurations {
     providedRuntime
+}
+
+artifacts {
+    archives war
 }
 
 dependencies {
