Issue #33:  Attempt to troubleshoot release issue

--- a/fbms-webapp/build.gradle
+++ b/fbms-webapp/build.gradle
@@ -90,6 +90,7 @@ task bootRunDataImport(type: org.springframework.boot.gradle.tasks.run.BootRun) 
     }
 }
 
+signArchives.dependsOn war
 uploadArchives{
     repositories {
         mavenDeployer {
