Issue #33:  Attempt to troubleshoot release issue

--- a/build.gradle
+++ b/build.gradle
@@ -107,5 +107,6 @@ subprojects {
             requireBranch = ''
         }
     }
+    runBuildTasks.dependsOn 'fbms-webapp:bootWar'
     afterReleaseBuild.dependsOn uploadArchives
 }
