chore(dependencies):  update formBuilderVersion to 0.2.1 and servletApiVersion to 3.1.0 (matches Tomcat 8.5.x)

--- a/fbms-core/build.gradle
+++ b/fbms-core/build.gradle
@@ -18,6 +18,6 @@ dependencies {
     compile "org.springframework:spring-web:${springVersion}"
     compile "org.springframework.security:spring-security-core:${springSecurityVersion}"
 
-    compileOnly "javax.servlet:servlet-api:${servletApiVersion}"
+    compileOnly "javax.servlet:javax.servlet-api:${servletApiVersion}"
 
 }
