chore:  update documentation WRT support for properties in PORTAL_HOME

--- a/fbms-webapp/src/main/resources/fbms.properties
+++ b/fbms-webapp/src/main/resources/fbms.properties
@@ -17,21 +17,38 @@
 # under the License.
 #
 
+## Server Port
+##
+## Ignored when running inside uPortal-start & Tomcat.
+#
 server.port=8091
 
+## JWT Signature Key
+##
+## Must match the value defined in uPortal (or other OIDC Id Token provider).
+#
 org.apereo.portal.soffit.jwt.signatureKey=CHANGEME
 
-## Database Connection Settings
+## Database Connection Settings:  uPortal Version
 ##
-## Attempts to leverage the standard properties in PORTAL_HOME, with fallback to the values in this file.
+## These properties match the standard database configuration settings in uPortal.  These values
+## will be overriden by properties of the same name in $PORTAL_HOME/global.properties or
+## $PORTAL_HOME/fbms.properties.  In local development, they can also be overriden in
+## application.properties.
 #
-hibernate.connection.driver_class=org.hsqldb.jdbc.JDBCDriver
-hibernate.connection.url=jdbc:hsqldb:hsql://localhost:8887/uPortal
-hibernate.connection.username=sa
-hibernate.connection.password=
-hibernate.connection.validationQuery=select 1 from INFORMATION_SCHEMA.SYSTEM_USERS
-hibernate.dialect=org.hibernate.dialect.HSQLDialect
+hibernate.connection.driver_class=CHANGEME
+hibernate.connection.url=CHANGEME
+hibernate.connection.username=CHANGEME
+hibernate.connection.password=CHANGEME
+hibernate.connection.validationQuery=CHANGEME
+hibernate.dialect=CHANGEME
 
+## Database Connection Settings:  Spring Boot Version
+##
+## These are the actual properties Spring Boot uses to construct the data source.  By default, their
+## values are constructed from the standard uPortal database connection properties, which can be
+## overriden in $PORTAL_HOME.
+#
 spring.datasource.driver-class=${hibernate.connection.driver_class}
 spring.datasource.url=${hibernate.connection.url}
 spring.datasource.username=${hibernate.connection.username}
