--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,7 @@ version=1.2.2-SNAPSHOT
 commonsLang3Version=3.7
 hibernateVersion=5.2.17.Final
 jacksonVersion=2.9.6
+janinoVersion=3.0.10
 servletApiVersion=3.1.0
 slf4jVersion=1.7.25
 springVersion=5.0.7.RELEASE
