--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,9 @@ commonsLang3Version=3.7
 hibernateVersion=5.2.17.Final
 jacksonVersion=2.9.6
 janinoVersion=3.0.10
+junit5Version=5.3.2
+junitPlatformVersion=1.3.2
+mockitoVersion=2.23.4
 servletApiVersion=3.1.0
 slf4jVersion=1.7.25
 springVersion=5.0.7.RELEASE
