build: remove no upward option, git ignore bin directories

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ jdk:
   - openjdk8
 
 script:
-  - ./gradlew -u -S --no-daemon --no-parallel check
+  - ./gradlew -S --no-daemon --no-parallel check
 
 cache:
   directories:
